--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="home-img">
-        <img src="C:\Users\usuario\Desktop\Sebastian\Sebastian\Portfolio\IMAGEN/programador.jpg" alt="programador">
+        <img src=url ("C:\Users\usuario\Desktop\Sebastian\Sebastian\Portfolio\IMAGEN/programador.jpg") alt="programador">
     </div>
     <div class="home-text">
         <span>Hola , soy</span>
