--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="home-img">
-        <img url=("C:\Users\usuario\Desktop\Sebastian\Sebastian\Portfolio\IMAGEN/programador.jpg") alt="programador">
+        <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmJPNrdVT9DqMJMXJQfiRVd4FxHJOoQlzRUw&usqp=CAU' alt="programador">
     </div>
     <div class="home-text">
         <span>Hola , soy</span>
