--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="about-container">
         <div class="about-img">
-            <img src="C:\Users\usuario\Desktop\Sebastian\Sebastian\Portfolio\IMAGEN/foto.jpg" alt="">
+            <img src="https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/foto.jpg" alt="">
         </div>
         <div class="about-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="skills-img">
-            <img src="C:\Users\usuario\Desktop\Sebastian\Sebastian\Portfolio\IMAGEN/skills.jpg" alt="Skill">
+            <img src="https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/skills.jpg" alt="Skill">
         </div>
     </div>
 </section>
