--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="skills-img">
-            <img url("https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/skills.jpg") alt="Skill">
+            <img src="https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/skills.jpg" alt="Skill">
         </div>
     </div>
 </section>
