--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="skills-img">
-            <img src="https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/skills.jpg" alt="Skill">
+            <img src="https://p92.com/binaries/content/gallery/p92website/technologies/htmlcssjs-overview.png" alt="Skill">
         </div>
     </div>
 </section>
