--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="home-img">
-        <img src='https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/programador.jpg' alt="programador">
+        <img src="https://cdn.create.vista.com/api/media/small/264684098/stock-photo-male-programmer-with-laptop-on" alt="programador">
     </div>
     <div class="home-text">
         <span>Hola , soy</span>
@@ -63,7 +63,7 @@
 
     <div class="about-container">
         <div class="about-img">
-            <img src="https://github.com/SebastianMatiasPepe/sebastianmatiaspepe.github.io/blob/main/IMAGEN/foto.jpg" alt="">
+            <img src="https://static.vecteezy.com/system/resources/previews/000/689/923/non_2x/software-programmer-cartoon-vector.jpg" alt="">
         </div>
         <div class="about-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est
